/**
 * Follow this process to write e2e tests for the CLI project:
 *
 * 1. Test if all the necessary mocks for your tests already exist.
 *    In mock mode, run the command you want to test with the same arguments
 *    and parameters exactly as you want to test it, for example:
 *
 *    $ FRODO_MOCK=1 frodo conn save https://openam-frodo-dev.forgeblocks.com/am volker.scheuber@forgerock.com Sup3rS3cr3t!
 *
 *    If your command completes without errors and with the expected results,
 *    all the required mocks already exist and you are good to write your
 *    test and skip to step #4.
 *
 *    If, however, your command fails and you see errors like the one below,
 *    you know you need to record the mock responses first:
 *
 *    [Polly] [adapter:node-http] Recording for the following request is not found and `recordIfMissing` is `false`.
 *
 * 2. Record mock responses for your exact command.
 *    In mock record mode, run the command you want to test with the same arguments
 *    and parameters exactly as you want to test it, for example:
 *
 *    $ FRODO_MOCK=record frodo conn save https://openam-frodo-dev.forgeblocks.com/am volker.scheuber@forgerock.com Sup3rS3cr3t!
 *
 *    Wait until you see all the Polly instances (mock recording adapters) have
 *    shutdown before you try to run step #1 again.
 *    Messages like these indicate mock recording adapters shutting down:
 *
 *    Polly instance 'conn/4' stopping in 3s...
 *    Polly instance 'conn/4' stopping in 2s...
 *    Polly instance 'conn/save/3' stopping in 3s...
 *    Polly instance 'conn/4' stopping in 1s...
 *    Polly instance 'conn/save/3' stopping in 2s...
 *    Polly instance 'conn/4' stopped.
 *    Polly instance 'conn/save/3' stopping in 1s...
 *    Polly instance 'conn/save/3' stopped.
 *
 * 3. Validate your freshly recorded mock responses are complete and working.
 *    Re-run the exact command you want to test in mock mode (see step #1).
 *
 * 4. Write your test.
 *    Make sure to use the exact command including number of arguments and params.
 *
 * 5. Commit both your test and your new recordings to the repository.
 *    Your tests are likely going to reside outside the frodo-lib project but
 *    the recordings must be committed to the frodo-lib project.
 */

/*
// Cloud
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo secretstore import -i ESV -f test/e2e/exports/all/allAlphaSecretStores.json
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo secretstore import --secretstore-id ESV --secretstore-type GoogleSecretManagerSecretStoreProvider -f test/e2e/exports/all/allAlphaSecretStores.json
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo secretstore import -af test/e2e/exports/all/allAlphaSecretStores.json
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=https://openam-frodo-dev.forgeblocks.com/am frodo secretstore import -AD test/e2e/exports/all-separate/cloud/realm/root-alpha/secretstore

// Classic
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=http://openam-frodo-dev.classic.com:8080/am frodo secretstore import -gf test/e2e/exports/all/allGlobalSecretStores.json -i default-keystore -m classic
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=http://openam-frodo-dev.classic.com:8080/am frodo secretstore import --global --all --file test/e2e/exports/all/allGlobalSecretStores.json --type classic
FRODO_MOCK=record FRODO_NO_CACHE=1 FRODO_HOST=http://openam-frodo-dev.classic.com:8080/am frodo secretstore import -gm classic --all-separate --directory test/e2e/exports/all-separate/classic/global/secretstore
*/

import { getEnv, testSuccess } from './utils/TestUtils';
import { connection as c, classic_connection as cc } from './utils/TestConfig';

process.env['FRODO_MOCK'] = '1';
process.env['FRODO_CONNECTION_PROFILES_PATH'] =
    './test/e2e/env/Connections.json';
const env = getEnv(c);
const classicEnv = getEnv(cc);

const allRealmFileName = `allAlphaSecretStores.json`;
const allGlobalFileName = `allGlobalSecretStores.json`;
const allRealmExport = `test/e2e/exports/all/${allRealmFileName}`
const allGlobalExport = `test/e2e/exports/all/${allGlobalFileName}`
const allSeparateRealmSecretStoresDirectory = `test/e2e/exports/all-separate/cloud/realm/root-alpha/secretstore`;
const allSeparateGlobalSecretStoresDirectory = `test/e2e/exports/all-separate/classic/global/secretstore`;

describe('frodo secretstore import', () => {
    test(`"frodo secretstore import -i ESV -f ${allRealmExport}": should import the ESV secret store`, async () => {
        const CMD = `frodo secretstore import -i ESV -f ${allRealmExport}`;
        await testSuccess(CMD, env);
    });
    test(`"frodo secretstore import --secretstore-id ESV --secretstore-type GoogleSecretManagerSecretStoreProvider -f ${allRealmExport}": should import the ESV secret store`, async () => {
        const CMD = `frodo secretstore import --secretstore-id ESV --secretstore-type GoogleSecretManagerSecretStoreProvider -f ${allRealmExport}`;
        await testSuccess(CMD, env);
    });
    test(`"frodo secretstore import -af ${allRealmExport}": should import all secret stores for realm`, async () => {
        const CMD = `frodo secretstore import -af ${allRealmExport}`;
        await testSuccess(CMD, env);
    });
    test(`"frodo secretstore import -AD ${allSeparateRealmSecretStoresDirectory}": should import all separate secret stores for realm`, async () => {
        const CMD = `frodo secretstore import -AD ${allSeparateRealmSecretStoresDirectory}`;
        await testSuccess(CMD, env);
    });
    test(`"frodo secretstore import -gf ${allGlobalExport} -i default-keystore -m classic": should import the default global keystore secret store`, async () => {
        const CMD = `frodo secretstore import -gf ${allGlobalExport} -i default-keystore -m classic`;
        await testSuccess(CMD, classicEnv);
    });
    test(`"frodo secretstore import --global --all --file ${allGlobalExport} --type classic": should import all global secret stores`, async () => {
        const CMD = `frodo secretstore import --global --all --file ${allGlobalExport} --type classic`;
        await testSuccess(CMD, classicEnv);
    });
    test(`"frodo secretstore import -gm classic --all-separate --directory ${allSeparateGlobalSecretStoresDirectory}": should import all separate global secret stores`, async () => {
        const CMD = `frodo secretstore import -gm classic --all-separate --directory ${allSeparateGlobalSecretStoresDirectory}`;
        await testSuccess(CMD, classicEnv);
    });
});
