// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo secretstore import "frodo secretstore import --global --all --file test/e2e/exports/all/allGlobalSecretStores.json --type classic": should import all global secret stores 1`] = `""`;

exports[`frodo secretstore import "frodo secretstore import --global --all --file test/e2e/exports/all/allGlobalSecretStores.json --type classic": should import all global secret stores 2`] = `
"Connected to http://openam-frodo-dev.classic.com:8080/am [/] as user amAdmin
"
`;

exports[`frodo secretstore import "frodo secretstore import --secretstore-id ESV --secretstore-type GoogleSecretManagerSecretStoreProvider -f test/e2e/exports/all/allAlphaSecretStores.json": should import the ESV secret store 1`] = `""`;

exports[`frodo secretstore import "frodo secretstore import --secretstore-id ESV --secretstore-type GoogleSecretManagerSecretStoreProvider -f test/e2e/exports/all/allAlphaSecretStores.json": should import the ESV secret store 2`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1749160367930 [b672336b-41ef-428d-ae4a-e0c082875377]
- Reading secret store...
- Importing secret store...
✔ Successfully imported secret store ESV.
"
`;

exports[`frodo secretstore import "frodo secretstore import -AD test/e2e/exports/all-separate/cloud/realm/root-alpha/secretstore": should import all separate secret stores for realm 1`] = `""`;

exports[`frodo secretstore import "frodo secretstore import -AD test/e2e/exports/all-separate/cloud/realm/root-alpha/secretstore": should import all separate secret stores for realm 2`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1749160367930 [b672336b-41ef-428d-ae4a-e0c082875377]
"
`;

exports[`frodo secretstore import "frodo secretstore import -af test/e2e/exports/all/allAlphaSecretStores.json": should import all secret stores for realm 1`] = `""`;

exports[`frodo secretstore import "frodo secretstore import -af test/e2e/exports/all/allAlphaSecretStores.json": should import all secret stores for realm 2`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1749160367930 [b672336b-41ef-428d-ae4a-e0c082875377]
"
`;

exports[`frodo secretstore import "frodo secretstore import -gf test/e2e/exports/all/allGlobalSecretStores.json -i default-keystore -m classic": should import the default global keystore secret store 1`] = `""`;

exports[`frodo secretstore import "frodo secretstore import -gf test/e2e/exports/all/allGlobalSecretStores.json -i default-keystore -m classic": should import the default global keystore secret store 2`] = `
"Connected to http://openam-frodo-dev.classic.com:8080/am [/] as user amAdmin
- Reading secret store...
- Importing secret store...
✔ Successfully imported secret store default-keystore.
"
`;

exports[`frodo secretstore import "frodo secretstore import -gm classic --all-separate --directory test/e2e/exports/all-separate/classic/global/secretstore": should import all separate global secret stores 1`] = `""`;

exports[`frodo secretstore import "frodo secretstore import -gm classic --all-separate --directory test/e2e/exports/all-separate/classic/global/secretstore": should import all separate global secret stores 2`] = `
"Connected to http://openam-frodo-dev.classic.com:8080/am [/] as user amAdmin
"
`;

exports[`frodo secretstore import "frodo secretstore import -i ESV -f test/e2e/exports/all/allAlphaSecretStores.json": should import the ESV secret store 1`] = `""`;

exports[`frodo secretstore import "frodo secretstore import -i ESV -f test/e2e/exports/all/allAlphaSecretStores.json": should import the ESV secret store 2`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo-SA-1749160367930 [b672336b-41ef-428d-ae4a-e0c082875377]
- Reading secret store...
- Importing secret store...
✔ Successfully imported secret store ESV.
"
`;
